# ZLSDE

./: .env.example  .git_files.txt  .gitignore  BENCHMARKS.md  LICENSE  PATENTABLE_FEATURES.md  README.md  SETUP.md  app.py  config.example.yaml  gen_commits.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py  run_ui.bat  setup.py  test_output.txt  test_output_utf8.txt  zlsde_metrics.md
.github/workflows/: ci.yml  release.yml
examples/: api_provider_example.py  basic_text_pipeline.py  config.yaml  config_api.yaml  config_multicluster.yaml  config_multicluster_520.yaml  config_multicluster_kmeans.yaml  custom_config.py
examples/data/: sample_text_multicluster_520.csv
notebooks/: benchmarks_run.ipynb
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/property/: __init__.py  test_validation_properties.py
tests/unit/: __init__.py  test_config_exceptions_label.py  test_features.py  test_layers_core.py  test_providers.py  test_utils_cli.py
zlsde/: __init__.py  cli.py  exceptions.py  orchestrator.py  ui.py  ui_simple.py
zlsde/config/: __init__.py  config_loader.py
zlsde/layers/: __init__.py  adaptive_training.py  clustering.py  drift_detection.py  embedding_fusion.py  exporter.py  ingestion.py  label_generation.py  provenance.py  provider_optimizer.py  quality_control.py  representation.py  self_training.py  semantic_validation.py  taxonomy_discovery.py
zlsde/models/: __init__.py  data_models.py
zlsde/providers/: __init__.py  api_providers.py  base.py  exceptions.py  factory.py  fallback_chain.py  local_provider.py
zlsde/utils/: __init__.py  logging_utils.py  metrics_utils.py  seed_control.py  validation_utils.py
